--- a/popcorn-web-streming-service-admin-panel/src/css/Navbar.css
+++ b/popcorn-web-streming-service-admin-panel/src/css/Navbar.css
@@ -1,19 +1,20 @@
 .navbar-container {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    background-color: rgb(255, 255, 255);
-    box-shadow: 0px 4px 10px gray;
-    padding: 1% 5%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  background-color: rgb(255, 255, 255);
+  box-shadow: 0px 4px 10px gray;
+  padding: 1% 5%;
 }
 .fa-bars {
-    cursor: pointer;
+  cursor: pointer;
 }
 .logout-link {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
-.navbar-right, .navbar-left {
-    padding: 1.5% 0%;
+.navbar-right,
+.navbar-left {
+  padding: 1.5% 0%;
 }
