--- a/popcorn-web-streming-service-admin-panel/src/css/Home.css
+++ b/popcorn-web-streming-service-admin-panel/src/css/Home.css
@@ -1,33 +1,6 @@
-.grid-items {
-  display: flex;
-}
-.grid-item-1 {
-  width: 20%;
-}
-.grid-item-2 {
-  width: 85%;
-}
-.fa-bars {
-  display: none;
-}
-@media only screen and (max-width: 1184px) {
-  .grid-item-1 {
-    width: 30%;
-  }
-}
-@media only screen and (max-width: 744px) {
-  .grid-item-1 {
-    width: 40%;
-  }
-}
-@media only screen and (max-width: 500px) {
-  #menu {
-    display: none;
-  }
-  .grid-item-2 {
-    width: 100%;
-  }
-  .fa-bars {
-    display: inline;
-  }
+.admin-panel-home {
+    height: 80vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
