--- a/popcorn-web-streming-service-frontend/src/css/SeriesDesc.css
+++ b/popcorn-web-streming-service-frontend/src/css/SeriesDesc.css
@@ -15,6 +15,23 @@
   display: flex;
   flex-wrap: wrap;
 }
+.season-button {
+  padding: 7px 17.5px;
+  border-radius: 5px;
+  cursor: pointer;
+  font-weight: 600;
+  font-size: 14px;
+  background-color: #1c212e;
+  color: #24baef;
+  border: none;
+  margin-left: 5px;
+  margin-top: 10px;
+}
+.season-button:hover {
+  color: #1c212e;
+  background-color: #24baef;
+}
+
 @media screen and (max-width: 500px) {
   .web-series-seasons-card {
     justify-content: center;
